--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,11 +4,13 @@
 @import "buttons.css";
 @import "recipe.css";
 @import "ingredient-list.css";
+@import "recipe-edit.css";
 
 *,
 *::before,
 *::after {
   font-family: Roboto, sans-serif;
+  box-sizing: border-box;
 }
 
 html {
